--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "license": "GPL-3.0",
   "devDependencies": {
     "@types/node": "^14.14.9",
+    "@types/node-fetch": "^2.5.7",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
   },
   "dependencies": {
     "discord.js": "^12.4.1",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "node-fetch": "^2.6.1"
   }
 }
