--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "maidrea_dicord-bot",
+  "name": "maidrea_discord-bot",
   "version": "0.0.1",
   "description": "A Discord bot",
   "main": "index.ts",
