--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@prisma/cli": "^2.12.1",
     "@types/node": "^14.14.9",
     "@types/node-fetch": "^2.5.7",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
+    "eslint": "^7.14.0",
+    "eslint-config-google": "^0.14.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
   },
