--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
 		"no-unused-vars": "off",
 		"no-mixed-spaces-and-tabs": "off",
 		"no-console": "off",
+		"no-underscore-dangle": "off",
 		"import/extensions": "off"
 	},
 	"settings": {
