--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@prisma/client": "^2.12.1",
     "discord.js": "^12.4.1",
     "dotenv": "^8.2.0",
+    "jimp": "^0.16.1",
     "node-fetch": "^2.6.1"
   }
 }
